--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grupo_5_tbd",
   "version": "1.0.0",
-  "description": "## Tabla de Contenidos",
+  "description": "## PowerCoreHard Online",
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app.js",
