--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "## PowerCoreHard Online",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "dev2": "node --watch app.js",
+    "dev": "nodemon src/app.js",
+    "dev2": "node --watch src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
