--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
-    "os": "^0.1.2"
+    "os": "^0.1.2",
+    "sweetalert2": "^11.12.2"
   }
 }
