--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
-  "name": "grupo_5_tbd",
+  "name": "grupo5",
   "version": "1.0.0",
-  "description": "## PowerCoreHard Online",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.js",
-    "dev2": "node --watch src/app.js",
+    "dev": "node --watch src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "method-override": "^3.0.0",
-    "os": "^0.1.2"
+    "method-override": "^3.0.0"
   }
 }
