--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.18.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.11.0"
+    "mysql2": "^3.11.0",
+    "sequelize": "^6.37.3"
   }
 }
